# information-retrieval-course

antispam/: .gitignore  README.md  main.py  pyproject.toml
boolean-retrieval/: .gitignore  README.md  hw2_boolean_search.py  pyproject.toml
boolean-retrieval/src/: parser.py
boolean-retrieval/src/word_multi_map/: bisect.py  bor.py  model.py
boolean-retrieval/tests/: test_parser.py
spell-checker/: .gitignore  README.md  analyzer.py  eval_submission.py  evaluate.py  main.py  pyproject.toml  submit_filter.py
spell-checker/src/: error_model.py  lev_dist.py  load_data.py  trie.py
