[tool.poetry]
name = "antispam"
version = "0.1.0"
description = ""
authors = ["Golovin Pavel <gopavel0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.13.0"
jupyter = "^1.0.0"
scikit-learn = "^0.22.2"
tqdm = "^4.45.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
